--- a/templates/plot.html
+++ b/templates/plot.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
 {% block content %}
   <h1>Plot Page</h1>
-  <img src="data:image/png;base64, {{ plot_url }}" width="20" height="20" alt="graph">
+  <img src="/plots/p1.png" alt="graph">
 {% endblock content %}
