Add 5 additional divs to layout

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -45,12 +45,23 @@
           {% block content %}{% endblock content %}
         </div>
         <div class="col-md-4">
-          <div class="content-section">
+          <!-- <div class="content-section"> -->
           <!-- A child template may override this block content -->
           {% block sidebar %}{% endblock sidebar %}
           </div>
         </div>
       </div>
+      <!-- Below is new conten from zoe -->
+      <div class="row">
+      </div>
+      <div class="row">
+      </div>
+      <div class="row">
+      </div>
+      <div class="row">
+      </div>
+      <!--End new content from zoe  -->
+
     </main>
 
 
