--- a/static/style.css
+++ b/static/style.css
@@ -8,6 +8,10 @@ h1, h2, h3, h4, h5, h6 {
   color: #444444;
 }
 
+.dataframe {
+  font-size: 0.5rem;
+}
+
 .bg-steel {
   background-color: #5f788a;
 }
