Correct block comments for sidebar

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -43,11 +43,13 @@
         <div class="col-md-8">
           <!-- A child template may override this block content -->
           {% block content %}{% endblock content %}
+          <!-- End of endblock content -->
         </div>
         <div class="col-md-4">
           <!-- <div class="content-section"> -->
-          <!-- A child template may override this block content -->
+          <!-- A child template may override this block sidebar-->
           {% block sidebar %}{% endblock sidebar %}
+          <!-- End of endblock sidebar -->
           </div>
         </div>
       </div>
