--- a/templates/layout.html
+++ b/templates/layout.html
@@ -27,6 +27,7 @@
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav mr-auto">
               <a class="nav-item nav-link" href="/">Home</a>
+              <a class="nav-item nav-link" href="/query">Query</a>
               <a class="nav-item nav-link" href="/table">Table</a>
               <a class="nav-item nav-link" href="/plot">Plot</a>
             </div>
