Experiment with dataframe text-align

--- a/templates/table.html
+++ b/templates/table.html
@@ -1,5 +1,12 @@
 {% extends "layout.html" %}
 {% block content %}
     <h1>Table Page</h1>
+    <table border="1" class="dataframe">
+      <thead>
+        <!-- element.style text-align should be center -->
+        <tr style="text-align: center;">
+        </tr>
+      </thead>
+     </table>
     {{ data.to_html() | safe }}
 {% endblock content %}
