Replace test dummy with flask pic

--- a/templates/home.html
+++ b/templates/home.html
@@ -2,6 +2,10 @@
 {% block content %}
       <article class="media content-section">
         <div class="media-body">
+          <h3>Welcome to QC Report</h3>
+          <p>Powered by Python and Flask...</p>
+          <br>
+        <img src="../static/flask_pic.svg" alt="">
         </div>
       </article>
 {% endblock content %}
