--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
           <h3>Welcome to QC Report</h3>
           <p>Powered by Python and Flask...</p>
           <br>
-        <img src="../static/flask_pic.svg" alt="">
+        <img src="http://flask.pocoo.org/static/logo/flask.svg" alt="">
         </div>
       </article>
 {% endblock content %}
