Change how /query works

--- a/qcweb/templates/query.html
+++ b/qcweb/templates/query.html
@@ -1,89 +1,24 @@
-{% extends "layout.html" %}
-{% block content %}
-  <body>
-      <form action="" method="get">
-
-        <!-- dropdown menus for plots -->
-        <form class="form-inline">
-        <label class="my-1 mr-2" for="inlineFormCustomSelectPref">Plots</label>
-        <select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref">
-        <!--select class="" name="plots" -->
-          <option selected>Choose ...</option>
-          <option value="bar">Bar</option>
-          <option value="heatmap">Heatmap</option>
-          <option value="piechart">Pie Chart</option>
-          <option value="scatter">Scatter</option>
-        </select>
-        <br>
-        <br>
-        <!--<input type="text" name="" placeholder="download" -->
-        <!--<input type="color" name="" value=""-->
-        <!--<input type="submit" name="" value="Enter" -->
-      </form>
-      <br>
-      <br>
-      <!-- dropdown menus -->
-          <div class="form-group">
-            <label for="exampleFormControlSelect1">Example select</label>
-            <select class="form-control" id="exampleFormControlSelect1">
-              <option>1</option>
-              <option>2</option>
-              <option>3</option>
-              <option>4</option>
-              <option>5</option>
-            </select>
-          </div>
-
-      <!-- new -->
-      <form>
-        <div class="form-group row">
-          <label for="inputEmail3" class="col-sm-2 col-form-label">Platform</label>
-          <div class="col-sm-10">
-            <input type="email" class="form-control" id="inputEmail3" placeholder="Platform">
-          </div>
-        </div>
-        <div class="form-group row">
-          <label for="inputPassword3" class="col-sm-2 col-form-label">Plots</label>
-          <div class="col-sm-10">
-            <input type="password" class="form-control" id="inputPassword3" placeholder="Plots">
-          </div>
-        </div>
-        <fieldset class="form-group">
-          <div class="row">
-            <legend class="col-form-label col-sm-2 pt-0">Display Table</legend>
-            <div class="col-sm-10">
-              <div class="form-check">
-                <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked>
-                <label class="form-check-label" for="gridRadios1">
-                  Yes
-                </label>
-              </div>
-
-              <div class="form-check disabled">
-                <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios3" value="option3" disabled>
-                <label class="form-check-label" for="gridRadios3">
-                  No
-                </label>
-              </div>
-            </div>
-          </div>
-        </fieldset>
-        <div class="form-group row">
-          <div class="col-sm-2">Display Table</div>
-          <div class="col-sm-10">
-            <div class="form-check">
-              <input class="form-check-input" type="checkbox" id="gridCheck1">
-              <label class="form-check-label" for="gridCheck1">
-                <!-- Yes -->
-              </label>
-            </div>
-          </div>
-        </div>
-        <div class="form-group row">
-          <div class="col-sm-10">
-            <button type="submit" class="btn btn-primary">Submit</button>
-          </div>
-        </div>
-      </form>
-  </body>
-{% endblock content %}
+<h1>Query Form</h1>
+<form method="post">
+  {{ form.hidden_tag() }}
+  {{ form.qcreport.label }}{{ form.qcreport }}
+  <br>
+  {{ form.platform.label }}{{ form.platform }}
+  <br>
+  {{ form.group.label }}{{ form.group }}
+  <br>
+  {{ form.appl.label }}{{ form.appl }}
+  <br>
+  QC group care about 'Run Finished Date'
+  <br>
+  {{ form.start }}
+  <br>
+  {{ form.end }}
+  <br>
+  {{ form.agg.label }}{{ form.agg }}
+  <br>
+  {{ form.plot_choice.label }}{{ form.plot_choice }}
+  <br>
+  {{ form.display_table.label }}{{ form.display_table }}
+  {{ form.submit() }}
+</form>
