--- a/qcweb/templates/query.html
+++ b/qcweb/templates/query.html
@@ -1,24 +1,29 @@
-<h1>Query Form</h1>
-<form method="post">
-  {{ form.hidden_tag() }}
-  {{ form.qcreport.label }}{{ form.qcreport }}
-  <br>
-  {{ form.platform.label }}{{ form.platform }}
-  <br>
-  {{ form.group.label }}{{ form.group }}
-  <br>
-  {{ form.appl.label }}{{ form.appl }}
-  <br>
-  QC group care about 'Run Finished Date'
-  <br>
-  {{ form.start }}
-  <br>
-  {{ form.end }}
-  <br>
-  {{ form.agg.label }}{{ form.agg }}
-  <br>
-  {{ form.plot_choice.label }}{{ form.plot_choice }}
-  <br>
-  {{ form.display_table.label }}{{ form.display_table }}
-  {{ form.submit() }}
-</form>
+{% extends "layout.html" %}
+{% block content %}
+  <body>
+    <h1>Query Form</h1>
+    <form method="post">
+      {{ form.hidden_tag() }}
+      {{ form.qcreport.label }}{{ form.qcreport }}
+      <br>
+      {{ form.platform.label }}{{ form.platform }}
+      <br>
+      {{ form.group.label }}{{ form.group }}
+      <br>
+      {{ form.appl.label }}{{ form.appl }}
+      <br>
+      QC group care about 'Run Finished Date'
+      <br>
+      {{ form.start }}
+      <br>
+      {{ form.end }}
+      <br>
+      {{ form.agg.label }}{{ form.agg }}
+      <br>
+      {{ form.plot_choice.label }}{{ form.plot_choice }}
+      <br>
+      {{ form.display_table.label }}{{ form.display_table }}
+      {{ form.submit() }}
+    </form>
+  </body>
+{% endblock content %}
