Experiment with results

--- a/qcweb/templates/query.html
+++ b/qcweb/templates/query.html
@@ -1,3 +1,4 @@
+{# Query HTML #}
 {% extends "layout.html" %}
 {% block content %}
   <body>
@@ -26,5 +27,6 @@
           {{ form.submit(class="btn btn-outline-info") }}
         </form>
       </div>
+    </nav>
   </body>
 {% endblock content %}
