Replace data1 & data2 by start and end

--- a/qcweb/templates/table.html
+++ b/qcweb/templates/table.html
@@ -1,8 +1,8 @@
 {% extends "layout.html" %}
 {% block content %}
     <h1>Table Page</h1>
-    <p>{{ data1 }}</p>
-    <p>{{ data2 }}</p>
+    <p>{{ start }}</p>
+    <p>{{ end }}</p>
     <table border="1" class="dataframe">
       <thead>
         <!-- element.style text-align should be center -->
