Add Demo Plot template

--- a/qcweb/templates/layout.html
+++ b/qcweb/templates/layout.html
@@ -31,6 +31,7 @@
               <a class="nav-item nav-link" href="/query">Query</a>
               <a class="nav-item nav-link" href="/table">Table</a>
               <a class="nav-item nav-link" href="/plot">Plot</a>
+              <a class="nav-item nav-link" href="/demo/plot">Demo Plot</a>
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
