Change justify option from default None to center in table.html

--- a/qcweb/templates/table.html
+++ b/qcweb/templates/table.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
 {% block content %}
     <h1>Table Page</h1>
-    {{ data.to_html() | safe }}
+    {{ data.to_html(justify='center') | safe }}
 {% endblock content %}
