--- a/qcweb/templates/table.html
+++ b/qcweb/templates/table.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
     <h1>Table Page</h1>
-    <p>{{ data1 }}</p>
-    <p>{{ data2 }}</p>
-    {{ data.to_html() | safe }}
+    <!-- p>{{ data1 }}</p -->
+    <!-- p>{{ data2 }}</p -->
+    {{ data.to_html(justify='center') | safe }}
 {% endblock content %}
