--- a/qcweb/templates/demo_plot.html
+++ b/qcweb/templates/demo_plot.html
@@ -1,5 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
-  <h1>Demo Plot Page</h1>
+  <h1>Demo Page</h1>
+  <img src="/demo/plot/p1.png" alt="graph">
+  <hr>
   <img src="/demo/plot/p2.png" alt="graph">
 {% endblock content %}
