--- a/qcweb/templates/query.html
+++ b/qcweb/templates/query.html
@@ -4,7 +4,7 @@
   <body>
     <h1>Query Form</h1>
       <div class="content-section">
-        <form method="post">
+          <form method="POST">
           {{ form.hidden_tag() }}
           <!-- {# { form.qcreport.label }}{{ form.qcreport }}
           <br>
