Show number of rows selected

--- a/qcweb/templates/table.html
+++ b/qcweb/templates/table.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
     <h1>Table Page</h1>
+    {{ num_rows }}
     <p>Here is the query info you entered:</p>
     <ul>
       <li>QC Report: {{ qcreport }}</li>
