Uncomment agg and plot_choice in table.html

--- a/qcweb/templates/table.html
+++ b/qcweb/templates/table.html
@@ -10,6 +10,8 @@
       <li>Application: {{ appl }}</li>
       <li>Start: {{ start }}</li>
       <li>End: {{ end }}</li>
+      <li>Aggregation: {{ agg }}</li>
+      <li>Plot Choice: {{ plot_choice }}</li>
       <li>Display Table: {{ display_table }}</li>
     </ul>
     <br>
