commented out search for later functionality

--- a/qcweb/templates/layout.html
+++ b/qcweb/templates/layout.html
@@ -33,9 +33,9 @@
               <a class="nav-item nav-link" href="/plot">Plot</a>
             </div>
             <!-- Navbar Right Side -->
-            <div class="navbar-nav">
-                <a class="nav-item nav-link" href="/search">Search</a>
-            </div>
+            <!--div class="navbar-nav"-->
+                <!--a class="nav-item nav-link" href="/search">Search</a-->
+            <!--/div-->
           </div>
         </div>
       </nav>
