--- a/qcweb/templates/home.html
+++ b/qcweb/templates/home.html
@@ -10,7 +10,7 @@
       </article>
 {% endblock content %}
 {% block sidebar %}
-    <div class="col-md-12">
+    <!--div class="col-md-12">
     <div class="content-section">
       <h3>Our Sidebar</h3>
       <p class='text-muted'>You can put any information here you'd like.
@@ -21,6 +21,6 @@
           <li class="list-group-item list-group-item-light">Contact Us</li>
         </ul>
       </p>
-    </div>
-  </div>
+     </div>
+  </div-->
 {% endblock sidebar %}
