Add category and message in layout.html

--- a/qcweb/templates/layout.html
+++ b/qcweb/templates/layout.html
@@ -43,6 +43,15 @@
     <main role="main" class="container">
       <div class="row">
         <div class="col-md-8">
+          {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+              {% for category, message in messages %}
+                <div class="alert alert-{{ category }}">
+                  {{ message }}
+                </div>
+              {% endfor %}
+            {% endif %}
+          {% endwith %}
           <!-- A child template may override this block content -->
           {% block content %}{% endblock content %}
           <!-- End of endblock content -->
