--- a/qcweb/templates/query.html
+++ b/qcweb/templates/query.html
@@ -4,6 +4,7 @@
   <body>
     <h1>Query Form</h1>
       <div class="content-section">
+          <div>{{ error }}</div>
           <form method="POST">
           {{ form.hidden_tag() }}
           {{ form.qcreport.label }}{{ form.qcreport }}
