--- a/qcweb/templates/query.html
+++ b/qcweb/templates/query.html
@@ -19,6 +19,9 @@
               {% else %}
               {{ form.qcreport }}
               {% endif %}
+              <small id="" class="text-muted">
+                must be 3-20 characters long...
+              </small>
             </div>
           <br>
           {{ form.platform.label }}{{ form.platform }}
