Add validators Length min, max for qcreport in form_fields.py

--- a/qcweb/templates/query.html
+++ b/qcweb/templates/query.html
@@ -19,8 +19,8 @@
               {% else %}
               {{ form.qcreport }}
               {% endif %}
-              <small id="" class="text-muted">
-                must be 3-20 characters long...
+              <small class="text-muted ml-2">
+                must be 2-20 characters long...
               </small>
             </div>
           <br>
