--- a/qcweb/static/style.css
+++ b/qcweb/static/style.css
@@ -83,3 +83,11 @@ a.article-title:hover {
 .account-heading {
   font-size: 2.5rem;
 }
+
+.alert.success {
+  background-color: green;
+}
+
+.alert.error {
+  background-color: red;
+}
