Set target to _blank in query.html

--- a/qcweb/templates/query.html
+++ b/qcweb/templates/query.html
@@ -33,7 +33,7 @@
       {% endif %}
     {% endwith %}
       <div class="content-section">
-          <form method="POST" action="">
+          <form method="POST" action="" target="_blank">
           {{ form.hidden_tag() }}
           <br>
           {{ form.platform.label }}{{ form.platform }}
