--- a/qcweb/templates/layout.html
+++ b/qcweb/templates/layout.html
@@ -30,11 +30,11 @@
               <a class="nav-item nav-link" href="{{ url_for('home') }}">Home</a>
               <a class="nav-item nav-link" href="{{ url_for('query') }}">Query</a>
               <a class="nav-item nav-link" href="{{ url_for('table') }}">Table</a>
-              <a class="nav-item nav-link" href="/plot">Plot</a>
+              <a class="nav-item nav-link" href="{{ url_for('plot') }}">Plot</a>
             </div>
             <!-- Navbar Right Side -->
             <!--div class="navbar-nav"-->
-                <!--a class="nav-item nav-link" href="/search">Search</a-->
+                <!--a class="nav-item nav-link" href="search">Search</a-->
             <!--/div-->
           </div>
         </div>
