Update small class text for start and end in query.html

--- a/qcweb/templates/query.html
+++ b/qcweb/templates/query.html
@@ -40,12 +40,12 @@
           <!-- QC group care about 'Run Finished Date' -->
           {{ form.start.label }}{{ form.start }}
               <small class="text-muted ml-2">
-                must be %Y-%m-%dT%H:%M:%S
+                can be %Y-%m-%d or %Y-%m-%dT%H:%M:%S
               </small>
           <br>
           {{ form.end.label }}{{ form.end }}
               <small class="text-muted ml-2">
-                must be %Y-%m-%dT%H:%M:%S
+                can be %Y-%m-%d or %Y-%m-%dT%H:%M:%S
               </small>
           <br>
           {{ form.agg.label }}{{ form.agg }}
