--- a/qcweb/templates/query.html
+++ b/qcweb/templates/query.html
@@ -51,7 +51,7 @@
           <br>
           {{ form.time_start.label }}{{ form.time_start }}
               <small class="text-muted ml-2">
-                can be T%H:%M:%S or blank
+                can be %H:%M:%S or blank
               </small>
           <br>
           {{ form.date_end.label }}{{ form.date_end }}
@@ -61,7 +61,7 @@
           <br>
           {{ form.time_end.label }}{{ form.time_end }}
               <small class="text-muted ml-2">
-                can be T%H:%M:%S or blank
+                can be %H:%M:%S or blank
               </small>
           <br>
           {{ form.agg.label }}{{ form.agg }}
