--- a/qcweb/templates/layout.html
+++ b/qcweb/templates/layout.html
@@ -44,9 +44,10 @@
       <div class="row">
         <div class="col-md-8">
           {% with messages = get_flashed_messages(with_categories=true) %}
+            <!-- Categories: success (green), info (blue), warning (yellow), danger (red) -->
             {% if messages %}
               {% for category, message in messages %}
-                <div class="alert alert-{{ category }}">
+                <div class= "alert alert-{{ category }}" role="alert">
                   {{ message }}
                 </div>
               {% endfor %}
