--- a/qcweb/static/style.css
+++ b/qcweb/static/style.css
@@ -84,12 +84,9 @@ a.article-title:hover {
   font-size: 2.5rem;
 }
 
-.alert.success {
-  background-color: green;
-}
-
 .alert.error {
-  background-color: red;
+  color: red;
+  background-color: #f0d6d6 !important;
 }
 
 /* Style buttons */
