--- a/qcweb/templates/query.html
+++ b/qcweb/templates/query.html
@@ -4,41 +4,31 @@
   <body>
     <h1>Query Form</h1>
     {% for message in form.qcreport.errors %}
-      <div class="alert" style="color: red; background-color: #f0d6d6; ">
-      {{ message }}
-      </div>
+      <div class="alert alert-danger">{{ message }}</div>
     {% endfor %}
     {% for message in form.platform.errors %}
-      <div class="alert">{{ message }}</div>
+      <div class="alert alert-danger">{{ message }}</div>
     {% endfor %}
     {% for message in form.group.errors %}
-      <div class="alert">{{ message }}</div>
+      <div class="alert alert-danger">{{ message }}</div>
     {% endfor %}
     {% for message in form.appl.errors %}
-      <div class="alert">{{ message }}</div>
+      <div class="alert alert-danger">{{ message }}</div>
     {% endfor %}
     {% for message in form.date_start.errors %}
-      <div class="alert" style="color: red; background-color: #f0d6d6; ">
-      {{ message }}
-      </div>
+      <div class="alert alert-danger">{{ message }}</div>
     {% endfor %}
     {% for message in form.time_start.errors %}
-      <div class="alert" style="color: red; background-color: #f0d6d6; ">
-      {{ message }}
-      </div>
+      <div class="alert alert-danger">{{ message }}</div>
     {% endfor %}
     {% for message in form.date_end.errors %}
-      <div class="alert" style="color: red; background-color: #f0d6d6; ">
-      {{ message }}
-      </div>
+      <div class="alert alert-danger">{{ message }}</div>
     {% endfor %}
     {% for message in form.time_end.errors %}
-      <div class="alert" style="color: red; background-color: #f0d6d6; ">
-      {{ message }}
-      </div>
+      <div class="alert alert-danger">{{ message }}</div>
     {% endfor %}
     {% for message in form.agg.errors %}
-      <div class="alert">{{ message }}</div>
+      <div class="alert alert-danger">{{ message }}</div>
     {% endfor %}
       <div class="content-section">
           <form method="POST" action="" target="_blank">
