--- a/qcweb/templates/query.html
+++ b/qcweb/templates/query.html
@@ -16,13 +16,13 @@
       <div class="alert alert-warning" role="alert">{{ message }}</div>
     {% endfor %}
     {% for message in form.date_start.errors %}
-      <div class="alert alert-primary" role="alert">{{ message }}</div>
+      <div class="alert alert-danger" role="alert">{{ message }}</div>
     {% endfor %}
     {% for message in form.time_start.errors %}
       <div class="alert alert-danger" role="alert">{{ message }}</div>
     {% endfor %}
     {% for message in form.date_end.errors %}
-      <div class="alert alert-primary" role="alert">{{ message }}</div>
+      <div class="alert alert-danger" role="alert">{{ message }}</div>
     {% endfor %}
     {% for message in form.time_end.errors %}
       <div class="alert alert-danger" role="alert">{{ message }}</div>
