--- a/qcweb/templates/query.html
+++ b/qcweb/templates/query.html
@@ -48,6 +48,11 @@
         Aggregation: {{ message }}
       </div>
     {% endfor %}
+    {% for message in form.plot_choice.errors %}
+      <div class="alert alert-warning" role="alert">
+        Plot: {{ message }}
+      </div>
+    {% endfor %}
       <div class="content-section">
           <form method="POST" action="" target="_blank">
           {{ form.qcreport.label }}{{ form.qcreport }}
@@ -84,7 +89,7 @@
           <br>
           {{ form.agg.label }}{{ form.agg }}
           <br>
-          {# { form.plot_choice.label }}{{ form.plot_choice } #}
+          {{ form.plot_choice.label }}{{ form.plot_choice }}
           <br>
           {{ form.display_table.label }}{{ form.display_table }}
           {{ form.submit(class="btn btn-outline-info") }}
