Create plot link from table page

--- a/qcweb/templates/table.html
+++ b/qcweb/templates/table.html
@@ -16,6 +16,7 @@
     </ul>
     <!-- Auto width -->
     <a href="{{ dl_url }}" download="qcweb_query.csv"><button>Download (CSV)</button></a>
+    <a href="{{ pl_url }}"><button>Plot These Results</button></a>
     <br>
     <br>
     {{ data.to_html(justify='center') | safe }}
