Change img src in plot.html

--- a/qcweb/templates/plot.html
+++ b/qcweb/templates/plot.html
@@ -7,6 +7,5 @@
   <br>
   <a href="{{ pl_url }}" download="plot.png"><button>Plot_Download</button></a>
   <hr>
-  <p>TODO: display correct plot</p>
-  <img src="{{ url_for('result_plot') }}" alt="graph">
+  <img src="{{ pl_url }}" alt="graph">
 {% endblock content %}
